Adding better image

--- a/index.html
+++ b/index.html
@@ -18,9 +18,22 @@
     </header>
     <main>
         <h2>More about us</h2>
-        <img src="./img/icon1.svg" alt="lock">
-        <h3>Security</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia maxime doloremque inventore cum sed debitis similique aspernatur ducimus aut dignissimos eius deleniti ullam, temporibus ratione est soluta eaque consectetur totam?</p>
+        <div>
+            <img src="./img/icon1.svg" alt="lock">
+            <h3>Security</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia maxime doloremque inventore cum sed debitis similique aspernatur ducimus aut dignissimos eius deleniti ullam, temporibus ratione est soluta eaque consectetur totam?</p>
+        </div>
+        <div>
+            <img src="./img/icon2.svg" alt="money">
+            <h3>Prices</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia maxime doloremque inventore cum sed debitis similique aspernatur ducimus aut dignissimos eius deleniti ullam, temporibus ratione est soluta eaque consectetur totam?</p>
+        </div>
+        <div>
+            <img src="./img/icon3.svg" alt="time">
+            <h3>Time</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia maxime doloremque inventore cum sed debitis similique aspernatur ducimus aut dignissimos eius deleniti ullam, temporibus ratione est soluta eaque consectetur totam?</p>
+        </div>
+
     </main>
 </body>
 </html>
