--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <title>Real Estate</title>
 </head>
 <body>
-    <header><h1>Real Estate</h1>
+    <header class="main-header">
 
-    <nav>
+        <div class="navigation-bar">
+            <h1>RealEstate</h1>
+    <nav class="menu">
         <a href="#">About</a>
         <a href="#">Blog</a>
-        <a href="#">Contact</a>
+        <a href="#">Contact</a>        
+        </div>
     </nav>   
-    <p>We sell luxury houses, condominiums and penthouses</p>
+        <p>We sell luxury houses, condominiums and penthouses</p>
+
     </header>
     <main>
         <h2>More about us</h2>
