--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="main-header">
 
         <div class="navigation-bar">
-            <h1>RealEstate</h1>
+            <h1>Real Estate</h1>
     <nav class="menu">
         <a href="#">About</a>
         <a href="#">Blog</a>
@@ -20,24 +20,116 @@
         <p>We sell luxury houses, condominiums and penthouses</p>
 
     </header>
-    <main>
+    <main class="container">
         <h2>More about us</h2>
-        <div>
-            <img src="./img/icon1.svg" alt="lock">
-            <h3>Security</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia maxime doloremque inventore cum sed debitis similique aspernatur ducimus aut dignissimos eius deleniti ullam, temporibus ratione est soluta eaque consectetur totam?</p>
-        </div>
-        <div>
-            <img src="./img/icon2.svg" alt="money">
-            <h3>Prices</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia maxime doloremque inventore cum sed debitis similique aspernatur ducimus aut dignissimos eius deleniti ullam, temporibus ratione est soluta eaque consectetur totam?</p>
-        </div>
-        <div>
-            <img src="./img/icon3.svg" alt="time">
-            <h3>Time</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia maxime doloremque inventore cum sed debitis similique aspernatur ducimus aut dignissimos eius deleniti ullam, temporibus ratione est soluta eaque consectetur totam?</p>
+        <div class="flex-about">
+            <div>
+                <img src="./img/icon1.svg" alt="lock">
+                <h3>Security</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia maxime doloremque inventore cum sed debitis similique aspernatur ducimus aut dignissimos eius deleniti ullam, temporibus ratione est soluta eaque consectetur totam?</p>
+            </div>
+            <div>
+                <img src="./img/icon2.svg" alt="money">
+                <h3>Prices</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia maxime doloremque inventore cum sed debitis similique aspernatur ducimus aut dignissimos eius deleniti ullam, temporibus ratione est soluta eaque consectetur totam?</p>
+            </div>
+            <div>
+                <img src="./img/icon3.svg" alt="time">
+                <h3>Time</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia maxime doloremque inventore cum sed debitis similique aspernatur ducimus aut dignissimos eius deleniti ullam, temporibus ratione est soluta eaque consectetur totam?</p>
+            </div>            
         </div>
 
+        <section>
+            <h2>Houses and penthouses</h2>
+
+            <div class="house-item">
+                <div class="house-item-img">
+                    <img src="./img/announcement1.jpg" alt="house on the lake">
+                </div>
+                <div class="house-item-text">
+                    <h3>Luxury house on the lake</h3>
+                    <p>Sequi quidem distinctio consectetur. Eos excepturi distinctio mollitia. Natus vero id iure, voluptatem cumque nihil.</p>
+                    <p>3,000,000.00</p>
+
+                    <ul>
+                        <li>
+                            <img src="./img/icon_wc.svg" alt="">
+                        </li>
+                        <p>3</p>
+                        <li>
+                            <img src="./img/icon_room.svg" alt="">
+                        </li>
+                        <p>4</p>
+                        <li>
+                            <img src="./img/icon_parking.svg" alt="">
+                        </li>
+                        <p>4</p>
+                    </ul>
+
+                    <a href="#" class="btn-details">See details</a>
+                </div>
+            </div>
+
+            <div class="house-item">
+                <div class="house-item-img">
+                    <img src="./img/announcement2.jpg" alt="house on the lake">
+                </div>
+                <div class="house-item-text">
+                    <h3>Luxury house</h3>
+                    <p>Sequi quidem distinctio consectetur. Eos excepturi distinctio mollitia. Natus vero id iure, voluptatem cumque nihil.</p>
+                    <p>5,000,000.00</p>
+
+                    <ul>
+                        <li>
+                            <img src="./img/icon_wc.svg" alt="">
+                        </li>
+                        <p>4</p>
+                        <li>
+                            <img src="./img/icon_room.svg" alt="">
+                        </li>
+                        <p>6</p>
+                        <li>
+                            <img src="./img/icon_parking.svg" alt="">
+                        </li>
+                        <p>2</p>
+                    </ul>
+
+                    <a href="#" class="btn-details">See details</a>
+                </div>
+            </div>
+
+            <div class="house-item">
+                <div class="house-item-img">
+                    <img src="./img/announcement3.jpg" alt="house on the lake">
+                </div>
+                <div class="house-item-text">
+                    <h3>House with a pool</h3>
+                    <p>Sequi quidem distinctio consectetur. Eos excepturi distinctio mollitia. Natus vero id iure, voluptatem cumque nihil.</p>
+                    <p>4,500,000.00</p>
+
+                    <ul>
+                        <li>
+                            <img src="./img/icon_wc.svg" alt="">
+                        </li>
+                        <p>2.5</p>
+                        <li>
+                            <img src="./img/icon_room.svg" alt="">
+                        </li>
+                        <p>3</p>
+                        <li>
+                            <img src="./img/icon_parking.svg" alt="">
+                        </li>
+                        <p>5</p>
+                    </ul>
+
+                    <a href="#" class="btn-details">See details</a>
+                </div>
+            </div>
+
+        </section>
+
     </main>
+
 </body>
 </html>
