--- a/index.html
+++ b/index.html
@@ -42,30 +42,31 @@
 
         <section>
             <h2>Houses and penthouses</h2>
-
-            <div class="house-item">
+            <div class="flex-container">
+               <div class="house-item">
                 <div class="house-item-img">
                     <img src="./img/announcement1.jpg" alt="house on the lake">
                 </div>
                 <div class="house-item-text">
                     <h3>Luxury house on the lake</h3>
                     <p>Sequi quidem distinctio consectetur. Eos excepturi distinctio mollitia. Natus vero id iure, voluptatem cumque nihil.</p>
-                    <p>3,000,000.00</p>
+                    <p class="price-color">3,000,000.00</p>
 
-                    <ul>
-                        <li>
+                    <div class="list-items">
+                        <div>
                             <img src="./img/icon_wc.svg" alt="">
-                        </li>
-                        <p>3</p>
-                        <li>
-                            <img src="./img/icon_room.svg" alt="">
-                        </li>
+                            <p>3</p>
+                        </div>
+                    <div>
+                        <img src="./img/icon_room.svg" alt="">
                         <p>4</p>
-                        <li>
-                            <img src="./img/icon_parking.svg" alt="">
-                        </li>
+                    </div>
+                    <div>
+                        <img src="./img/icon_parking.svg" alt="">
                         <p>4</p>
-                    </ul>
+                    </div>                        
+                    </div>
+
 
                     <a href="#" class="btn-details">See details</a>
                 </div>
@@ -78,23 +79,22 @@
                 <div class="house-item-text">
                     <h3>Luxury house</h3>
                     <p>Sequi quidem distinctio consectetur. Eos excepturi distinctio mollitia. Natus vero id iure, voluptatem cumque nihil.</p>
-                    <p>5,000,000.00</p>
+                    <p class="price-color">5,000,000.00</p>
 
-                    <ul>
-                        <li>
+                    <div class="list-items">
+                        <div>
                             <img src="./img/icon_wc.svg" alt="">
-                        </li>
+                            <p>3</p>
+                        </div>
+                    <div>
+                        <img src="./img/icon_room.svg" alt="">
                         <p>4</p>
-                        <li>
-                            <img src="./img/icon_room.svg" alt="">
-                        </li>
-                        <p>6</p>
-                        <li>
-                            <img src="./img/icon_parking.svg" alt="">
-                        </li>
-                        <p>2</p>
-                    </ul>
-
+                    </div>
+                    <div>
+                        <img src="./img/icon_parking.svg" alt="">
+                        <p>4</p>
+                    </div>                        
+                    </div>
                     <a href="#" class="btn-details">See details</a>
                 </div>
             </div>
@@ -106,26 +106,28 @@
                 <div class="house-item-text">
                     <h3>House with a pool</h3>
                     <p>Sequi quidem distinctio consectetur. Eos excepturi distinctio mollitia. Natus vero id iure, voluptatem cumque nihil.</p>
-                    <p>4,500,000.00</p>
+                    <p class="price-color">4,500,000.00</p>
 
-                    <ul>
-                        <li>
+                    <div class="list-items">
+                        <div>
                             <img src="./img/icon_wc.svg" alt="">
-                        </li>
-                        <p>2.5</p>
-                        <li>
-                            <img src="./img/icon_room.svg" alt="">
-                        </li>
-                        <p>3</p>
-                        <li>
-                            <img src="./img/icon_parking.svg" alt="">
-                        </li>
-                        <p>5</p>
-                    </ul>
+                            <p>3</p>
+                        </div>
+                    <div>
+                        <img src="./img/icon_room.svg" alt="">
+                        <p>4</p>
+                    </div>
+                    <div>
+                        <img src="./img/icon_parking.svg" alt="">
+                        <p>4</p>
+                    </div>                        
+                    </div>
 
                     <a href="#" class="btn-details">See details</a>
                 </div>
+            </div> 
             </div>
+            
 
         </section>
 
