--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="navigation-bar">
             <h1>Real Estate</h1>
     <nav class="menu">
-        <a href="#">About</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>        
+        <a href="about.html">About</a>
+        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact</a>        
         </div>
     </nav>   
         <p>We sell luxury houses, condominiums and penthouses</p>
