--- a/about.html
+++ b/about.html
@@ -5,20 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./mystyle.css">
+    <script src="https://kit.fontawesome.com/71c53753be.js" crossorigin="anonymous"></script>
 </head>
 <body>
         <header class="main-header">
 
         <div class="navigation-bar">
-            <h1>Real Estate</h1>
-    <nav class="menu">
+            <a href="./index.html"><h1>Real Estate</h1></a>
+            <nav class="menu">
         <a href="about.html">About</a>
         <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>        
+            </nav>           
         </div>
-    </nav>   
-        <p>We sell luxury houses, condominiums and penthouses</p>
 
     </header>
+    <main class="container about-sections">
+        <section>
+            <div class="about-item">
+                <h2>Real Estate</h2>
+                <p>Real Estate is a trusted name in property solutions, specializing in helping individuals and families find the perfect place to call home. With a focus on reliability, transparency, and client satisfaction, we strive to make every real estate experience simple, stress-free, and rewarding.</p>
+            </div>
+            <div class="about-item">
+                <h2>Our Mission</h2>
+                <p>At Real Estate, our mission is to connect people with opportunities. Whether buying, selling, or investing, we aim to provide expert guidance, personalized service, and lasting value to our clients and communities.</p>
+            </div>
+            <div class="about-item">
+                <h2>Our Services</h2>
+                    <p>Residential Sales & Purchases</p>
+                    <p>Rental & Leasing Solutions</p>
+                    <p>Property Management</p>
+                    <p>Real Estate Investment Guidance</p>
+            </div>            
+        </section>
+
+        <section class="about-contact">
+            <h2>Contact Us</h2>
+            <div>
+                <p><i class="fa-solid fa-envelope"></i>Email: info@realestate.com</p>
+            </div>
+            <div>
+                <p><i class="fa-solid fa-phone"></i>Phone: (555) 123-4567</p>
+            </div>
+            <div>
+                <p><i class="fa-solid fa-globe"></i>Website: www.realestate.com</p>
+            </div>
+
+        </section>
+    </main>
+
 </body>
 </html>
