--- a/blog.html
+++ b/blog.html
@@ -6,19 +6,34 @@
     <title>Document</title>
     <link rel="stylesheet" href="./mystyle.css">
 </head>
-<body>
+<body class="blog-page">
         <header class="main-header">
 
         <div class="navigation-bar">
-            <h1>Real Estate</h1>
-    <nav class="menu">
+            <a href="./index.html"><h1>Real Estate</h1></a>
+            <nav class="menu">
         <a href="about.html">About</a>
         <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>        
+            </nav>           
         </div>
-    </nav>   
-        <p>We sell luxury houses, condominiums and penthouses</p>
-
+        
     </header>
+    <main class="container about-sections">
+        <div class="blog1-img">
+            <h2>5 Things to Check Before Buying Your First Home</h2>
+            <p>Buying your first home is exciting—but it's easy to overlook important details.<br>
+             From inspection red flags to understanding your financing options, here are five things every first-time buyer should know.</p>
+            <button>Read more</button>
+        </div>
+        
+        <div class="blog2-img">
+            <h2>Top Neighborhoods to Watch in 2025</h2>
+            <p>Real estate trends are shifting fast. Whether you're buying to live or invest,<br>
+            these up-and-coming neighborhoods are expected to see growth in value, demand, and livability in the year ahead.</p>
+            <button>Read more</button>
+        </div>
+
+    </main>
 </body>
 </html>
