--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <header class="contact-header">
 
         <div class="navigation-bar">
-            <h1>Real Estate</h1>
+            <a href="./index.html"><h1>Real Estate</h1></a>
             <nav class="menu">
         <a href="about.html">About</a>
         <a href="blog.html">Blog</a>
