--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <header class="main-header">
 
         <div class="navigation-bar">
-            <h1>Real Estate</h1>
-    <nav class="menu">
+            <a href="./index.html"><h1>Real Estate</h1></a>
+            <nav class="menu">
         <a href="about.html">About</a>
         <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>        
-        </div>
-    </nav>   
+            </nav>           
+        </div> 
         <p>We sell luxury houses, condominiums and penthouses</p>
 
     </header>
